# DudeServer

./: .gitignore  CMakeLists.txt  README.md  vagrantreadme.txt
certificates/: certificate.pem
certificates/private/: private_key.pem
cmake/: Findsqlite3.cmake
database/: channelList.xml  test.xml  userlist.xml
database/channels/: batcave.xml
database/users/: alibaba.xml  desmond.xml  fatih.xml  ferdi.xml  harmen.xml  sjuul.xml
source/: CMakeLists.txt  client.c  client.h  communication.c  communication.h  errors.c  errors.h  main.c  main.h  medium.c  medium.h  performanceTimer.c  performanceTimer.h  protocolDefines.h  server.c  server.h  success.c  success.h  xmlWriter.c  xmlWriter.h
source/commands/: create_user.c  create_user.h  delete_user.c  delete_user.h  invite.c  invite.h  join.c  join.h  kick.c  kick.h  login.c  login.h  mode.c  mode.h  names.c  names.h  part.c  part.h  poll.c  poll.h  privmsg.c  privmsg.h  topic.c  topic.h  update_channel_password.c  update_channel_password.h  update_nickname.c  update_nickname.h  update_password.c  update_password.h
source/database/: channel.c  channel.h  channelMessage.c  channelMessage.h  channelUser.c  channelUser.h  database.c  database.h  databaseStructs.h  databaseStructs_free.c  databaseStructs_free.h  dbDefines.h  user.c  user.h
source/messages/: messages.c  messages.h
source/ssl/: communication.c  communication.h  communicationStructs.h
source/utils/: commandStruct.h  utils.c  utils.h
test/: CMakeLists.txt  main.c  main.h  testStructs.h
test/client/: test_client.c  test_client.h  test_client_main.c  test_client_main.h
test/database/: check_channel.c  check_channel.h  check_user.c  check_user.h
test/knownBugs/: knownBugs.c  knownBugs.h
test/performanceMeting/: test_performance_meting.c  test_performance_meting.h  test_performance_meting_server.c  test_performance_meting_server.h
test/server/: test_suite_commands.c  test_suite_commands.h
test/utils/: check_utils.c  check_utils.h
xml/: channelList.xml  channellist.xml  test.xml  userlist.xml
xml/channels/: batcave.xml  eigendunk.xml  fatihs head.xml  rovers.xml  testChannel.xml
xml/users/: alibaba.xml  banned.xml  desmond.xml  dummy.xml  fatih.xml  sjuul.xml
